--- a/doc/paper_draft/sections/5-discussion.tex
+++ b/doc/paper_draft/sections/5-discussion.tex
@@ -2,9 +2,11 @@
 
 \textbf{Discussion}
 
-\todolist{Limitation}
+The method potential has an advantage on high-resolution images optical flow estimation.
 
-\textbf{Future Work}
+
+\textbf{Limitation \& Future Work}
 
 To sccelerate the projection and stitch step, with multi-thread or c++.
 
+Pixel-based warping to deal with non-rigid or un-egomoiton.
