--- a/doc/paper_draft/bmvc_review.tex
+++ b/doc/paper_draft/bmvc_review.tex
@@ -3,7 +3,7 @@
 %% Enter your paper number here for the review copy
 \bmvcreviewcopy{298}
 
-\title{Panoramic Optical Flow With Icosahedron Sampling and Gnomonic Projection}
+\title{Panoramic Optical Flow Using Global Rotation Warping and Tangent Image}
 
 % Enter the paper's authors in order
 % \addauthor{Name}{email/homepage}{INSTITUTION_CODE}
