--- a/doc/paper_draft/sections/supplementary.tex
+++ b/doc/paper_draft/sections/supplementary.tex
@@ -1,7 +1,6 @@
 \appendix
 \section{supplementary}
 
-\TODO{move the notation to Fig.1 and remove the table.}
 
 \begin{table}[h!]
 	\centering
@@ -33,6 +32,14 @@
 \end{table}
 
 \subsection{Coordinate system}
+
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=1.0\linewidth]{images/coordinate_system.pdf}
+	\caption{Coordinate system.}
+	\label{fig:supp:coordinatesystem}
+\end{figure}
 
 \textbf{ERP image pixel coordinate system}
 
