update related work

--- a/doc/paper_draft/egbib.bib
+++ b/doc/paper_draft/egbib.bib
@@ -130,4 +130,128 @@ year = 2000
   year    = {2020},
 }
 
+@Article{tran2021sslayout360,
+	author  = {Tran, Phi Vu},
+	journal = {arXiv preprint arXiv:2103.13696},
+	title   = {SSLayout360: Semi-Supervised Indoor Layout Estimation from 360 Panorama},
+	year    = {2021}
+}
+@Article{yang2021capturing,
+	author  = {Yang, Kailun and Zhang, Jiaming and Rei{\ss}, Simon and Hu, Xinxin and Stiefelhagen, Rainer},
+	journal = {arXiv preprint arXiv:2103.05687},
+	title   = {Capturing Omni-Range Context for Omnidirectional Segmentation},
+	year    = {2021}
+}
+
+@Article{wang2021led2,
+	author  = {Wang, Fu-En and Yeh, Yu-Hsuan and Sun, Min and Chiu, Wei-Chen and Tsai, Yi-Hsuan},
+	journal = {arXiv preprint arXiv:2104.00568},
+	title   = {LED2-Net: Monocular 360 Layout Estimation via Differentiable Depth Rendering},
+	year    = {2021},
+}
+
+
+@Article{xu2021layout,
+	author  = {Xu, Jiale and Zheng, Jia and Xu, Yanyu and Tang, Rui and Gao, Shenghua},
+	journal = {arXiv preprint arXiv:2103.17022},
+	title   = {Layout-Guided Novel View Synthesis from a Single Indoor Panorama},
+	year    = {2021}
+}
+
+
+@InProceedings{artizzu2021omniflownet,
+	author    = {Artizzu, Charles-Olivier and Zhang, Haozhou and Allibert, Guillaume and Demonceaux, C{\'e}dric},
+	booktitle = {25th International Conference on Pattern Recognition (ICPR)},
+	title     = {OmniFlowNet: a Perspective Neural Network Adaptation for Optical Flow Estimation in Omnidirectional Images},
+	year      = {2021}
+}
+
+@InProceedings{wang2020360sd,
+	author       = {Wang, Ning-Hsu and Solarte, Bolivar and Tsai, Yi-Hsuan and Chiu, Wei-Chen and Sun, Min},
+	booktitle    = {2020 IEEE International Conference on Robotics and Automation (ICRA)},
+	title        = {360SD-Net: 360° Stereo Depth Estimation with Learnable Cost Volume},
+	year         = {2020},
+	organization = {IEEE},
+	pages        = {582--588}
+}
+
+@Article{bhandari2020revisiting,
+	author  = {Bhandari, Keshav and Zong, Ziliang and Yan, Yan},
+	journal = {arXiv preprint arXiv:2010.08045},
+	title   = {Revisiting Optical Flow Estimation in 360 Videos},
+	year    = {2020}
+}
+
+@InProceedings{gkitsas2020deep,
+	author    = {Gkitsas, Vasileios and Zioulis, Nikolaos and Alvarez, Federico and Zarpalas, Dimitrios and Daras, Petros},
+	booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition Workshops},
+	title     = {Deep lighting environment map estimation from spherical panoramas},
+	year      = {2020},
+	pages     = {640--641}
+}
+
+@Article{luo2019hexagonal,
+	author    = {Luo, Junren and Zhang, Wanpeng and Su, Jiongming and Xiang, Fengtao},
+	journal   = {IEEE Access},
+	title     = {Hexagonal Convolutional Neural Networks for Hexagonal Grids},
+	year      = {2019},
+	pages     = {142738--142749},
+	volume    = {7},
+	publisher = {IEEE},
+}
+
+@InProceedings{su2019kernel,
+	author    = {Su, Yu-Chuan and Grauman, Kristen},
+	booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+	title     = {Kernel transformer networks for compact spherical convolution},
+	year      = {2019},
+	pages     = {9442--9451},
+}
+
+@InProceedings{zhang2019orientation,
+	author    = {Zhang, Chao and Liwicki, Stephan and Smith, William and Cipolla, Roberto},
+	booktitle = {Proceedings of the IEEE/CVF International Conference on Computer Vision},
+	title     = {Orientation-aware semantic segmentation on icosahedron spheres},
+	year      = {2019},
+	pages     = {3533--3541}
+}
+
+@InProceedings{gkitsas2020deep,
+	author    = {Gkitsas, Vasileios and Zioulis, Nikolaos and Alvarez, Federico and Zarpalas, Dimitrios and Daras, Petros},
+	booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition Workshops},
+	title     = {Deep lighting environment map estimation from spherical panoramas},
+	year      = {2020},
+	pages     = {640--641},
+}
+
+@InProceedings{su2019kernel,
+	author    = {Su, Yu-Chuan and Grauman, Kristen},
+	booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+	title     = {Kernel transformer networks for compact spherical convolution},
+	year      = {2019},
+	pages     = {9442--9451}
+}
+
+@InProceedings{cohen2018spherical,
+	author    = {Cohen, Taco S and Geiger, Mario and K{\"o}hler, Jonas and Welling, Max},
+	booktitle = {International Conference on Learning Representations},
+	title     = {Spherical CNNs},
+	year      = {2018},
+}
+
+@InProceedings{jiang2018spherical,
+	author    = {Jiang, Chiyu Max and Huang, Jingwei and Kashinath, Karthik and Marcus, Philip and Niessner, Matthias and others},
+	booktitle = {International Conference on Learning Representations},
+	title     = {Spherical CNNs on Unstructured Grids},
+	year      = {2018}
+}
+
+@InProceedings{lee2019spherephd,
+	author    = {Lee, Yeonkun and Jeong, Jaeseok and Yun, Jongseob and Cho, Wonjune and Yoon, Kuk-Jin},
+	booktitle = {Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+	title     = {SpherePHD: Applying CNNs on a spherical polyhedron representation of 360deg images},
+	year      = {2019},
+	pages     = {9181--9189}
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
